update title text

--- a/example/static/index.html
+++ b/example/static/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>voxel debris</title>
+    <title>voxel portal</title>
     <style type="text/css">
       body {
         margin: 0px;
